Add tree component support to extension
Tree component from Chrome internal resources used (BSD-style lecense).
Cards on popup window rendered with tree component (flat view so far).

--- a/clipperz-chrome-extension/html/background.html
+++ b/clipperz-chrome-extension/html/background.html
@@ -39,6 +39,10 @@
     <script src="/js/Clipperz/Crypto/Base.js"></script>
     <script src="/js/Clipperz/Crypto/SRP.js"></script>
     <script src="/js/Clipperz/Crypto/RSA.js"></script>
+
+    <script src="/js/Clipperz/PM/Strings/Strings_defaults.js"></script>
+    <script src="/js/Clipperz/PM/Strings/Strings_en-US.js"></script>
+    <script src="/js/Clipperz/PM/Strings.js"></script>
     
     <script src="/js/Clipperz/PM/Date.js"></script>
     <script src="/js/Clipperz/PM/Toll.js"></script>
@@ -74,7 +78,7 @@
         Clipperz_normalizedNewLine = '\n';
         Clipperz_dumpUrl = "/dump/";
 
-        Clipperz.PM.Proxy.defaultProxy = new Clipperz.PM.Proxy.JSON({'url':'https://www.clipperz.com/beta/json', 'shouldPayTolls':true});
+        Clipperz.PM.Proxy.defaultProxy = new Clipperz.PM.Proxy.JSON({'url':'https://www.clipperz.com/gamma/json', 'shouldPayTolls':true});
     </script>
 </head>
 <body></body>
