Enhance tree of cards
Create tree of cards with custom node separator. Separator
customized on Options page and used to split labels of cards
as a path in a tree. Example: label "a/b/c" with separator "/"
will produce subtree with nodes a, b, c, where b is a child of a and
c is a child of b.

--- a/clipperz-chrome-extension/html/popup.html
+++ b/clipperz-chrome-extension/html/popup.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="/css/cr/tree.css">
 
     <script src="/js/cr/cr.js"></script>
+    <script src="/js/cr/util.js"></script>
     <script src="/js/cr/ui/ui.js"></script>
     <script src="/js/cr/ui/tree.css.js"></script>
     <script src="/js/cr/ui/tree.js"></script>
