--- a/clipperz-chrome-extension/html/background.html
+++ b/clipperz-chrome-extension/html/background.html
@@ -69,9 +69,15 @@
     <script src="/js/Clipperz/PM/DataModel/DirectLoginBinding.js"></script>
     <script src="/js/Clipperz/PM/DataModel/DirectLoginFormValue.js"></script>
     <script src="/js/Clipperz/PM/DataModel/OneTimePassword.js"></script>
-    
--    <script src="/js/Clipperz/PM/UI/Extensions/Chrome/Controllers/MainController.js"></script>
-    
+
+    <script src="/js/Clipperz/PM/UI/Common/Controllers/DirectLoginRunner.js"></script>
+    <script src="/js/Clipperz/PM/UI/Common/Controllers/ProgressBarController.js"></script>
+
+    <script src="/js/Clipperz/PM/UI/Extensions/Chrome/Components/BackgroundLoginProgress.js"></script>
+
+    <script src="/js/Clipperz/PM/UI/Extensions/Chrome/Controllers/MainController.js"></script>
+    <script src="/js/Clipperz/PM/UI/Extensions/Chrome/Controllers/BackgroundLoginController.js"></script>
+
     <script src="/js/Clipperz/PM/UI/Extensions/Chrome/main.js"></script>
     <script>
         Clipperz_IEisBroken = false;
