--- a/clipperz-chrome-extension/html/background.html
+++ b/clipperz-chrome-extension/html/background.html
@@ -87,4 +87,6 @@
         Clipperz.PM.Proxy.defaultProxy = new Clipperz.PM.Proxy.JSON({'url':'https://www.clipperz.com/gamma/json', 'shouldPayTolls':true});
     </script>
 </head>
-<body></body>
+<body>
+    <textarea rows="100" cols="100" id="clipboardholder" style="display: none"></textarea>
+</body>
