Cache cards in the localStorage

--- a/clipperz-chrome-extension/html/background.html
+++ b/clipperz-chrome-extension/html/background.html
@@ -69,6 +69,7 @@
     <script src="/js/Clipperz/PM/DataModel/DirectLoginBinding.js"></script>
     <script src="/js/Clipperz/PM/DataModel/DirectLoginFormValue.js"></script>
     <script src="/js/Clipperz/PM/DataModel/OneTimePassword.js"></script>
+    <script src="/js/Clipperz/PM/DataModel/DirectLoginPlainWrapper.js"></script>
 
     <script src="/js/Clipperz/PM/UI/Common/Controllers/DirectLoginRunner.js"></script>
     <script src="/js/Clipperz/PM/UI/Common/Controllers/ProgressBarController.js"></script>
